# FW_CUDA

./: .gitignore  CMakeLists.txt  README.md
include/: algo_types.h  algorithm_runner.h  constants.h  cuda_utils.cuh  fw_baseline_cpu.h  fw_baseline_gpu.cuh  fw_multi_layer_tiling_gpu.cuh  fw_multi_layer_tiling_optimized_gpu.cuh  fw_tiling_gpu.cuh  gpu_memory.cuh  graph_generator.h  tests.h  tests_runner.h  timer.cuh  utils.h
profiler/: metrics_kappa2.csv  metrics_kappa4.csv  metrics_kappa8.csv  metrics_tiling.csv
src/: algorithm_runner.cu  bench_runner.cpp  cuda_utils.cu  fw_baseline_cpu.cpp  fw_baseline_gpu.cu  fw_multi_layer_tiling_gpu.cu  fw_multi_layer_tiling_optimized_gpu.cu  fw_tiling_gpu.cu  gpu_memory.cu  graph_generator.cpp  tests.cpp  tests_gpu.cu  tests_main.cpp  tests_runner.cpp  tests_runner.cu  timer.cu  utils.cpp
